Update README.md
updated the read mean to give more details on how to run the project